# Cpp-distributed-scheduler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  profile_test.cpp
include/: heartbeat_monitor.h  load_balancer.h  master.h  task.h  task_router.h  worker.h
proto/: CMakeLists.txt  task.proto
src/: heartbeat_monitor.cpp  load_balancer.cpp  master.cpp  task.cpp  task_router.cpp  worker.cpp
tests/: heartbeat_test.cpp  integration_test.cpp  load_balancer_test.cpp  master_test.cpp  task_router_test.cpp  task_test.cpp  worker_test.cpp
